# architect-ai

./: README.md
backend/: AGENTS.md  README.md  pyproject.toml
backend/output/: airbnb_system_design.md  groww_system_design.md  mindtrot_technologies_system_design.md
backend/src/server/: api.py  main.py
backend/src/server/crews/architecture_crew/: architecture_crew.py
backend/src/server/crews/architecture_crew/config/: agents.yaml  tasks.yaml
backend/src/server/crews/documentation_crew/: documentation_crew.py
backend/src/server/crews/documentation_crew/config/: agents.yaml  tasks.yaml
backend/src/server/crews/requirement_crew/: requirement_crew.py
backend/src/server/crews/requirement_crew/config/: agents.yaml  tasks.yaml
backend/src/server/crews/review_crew/: review_crew.py
backend/src/server/crews/review_crew/config/: agents.yaml  tasks.yaml
backend/src/server/crews/subsystem_crew/: subsystem_crew.py
backend/src/server/crews/subsystem_crew/config/: agents.yaml  tasks.yaml
backend/src/server/llm/: base.py  factory.py  providers.py
backend/src/server/output/: uber_system_design.md
backend/src/server/schemas/: __init__.py  architecture_design.py  design_review.py  requirement_spec.py  subsystem_design.py
backend/src/server/tools/: custom_tool.py  mermaid_tools.py
client/: index.html  package.json  pnpm-lock.yaml
client/src/: App.tsx  index.css
client/src/components/: GenerationProgress.tsx  MarkdownRenderer.tsx
