[project]
name = "server"
version = "0.1.0"
description = "server using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.14.7",
    "litellm>=1.89.3",
]

[project.scripts]
kickoff = "server.main:kickoff"
run_crew = "server.main:kickoff"
plot = "server.main:plot"
run_with_trigger = "server.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
